# struct-output-bench

./: .env.example  .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml  run_benchmark.py
app/: config.py
app/api/: router.py
app/benchmark/: config.py  datasets.py  runner.py
app/datasets/deepjsoneval/: __init__.py  downloader.py  loader.py
app/datasets/extractbench/: downloader.py  loader.py  pdf_converter.py  prompt_generator.py  scorer.py
app/datasets/shared/: schema_converter.py
app/frameworks/: base.py  guardrails_fw.py  instructor_fw.py  langchain_fw.py  llamaindex_fw.py  marvin_fw.py  mirascope_fw.py  openai_native.py  pydantic_ai_fw.py  registry.py  schema_utils.py
app/prompts/templates/: extract_extractbench_minimal.yaml
app/schemas/: __init__.py  career.py  career_no_desc.py
app/scoring/: __init__.py  hungarian.py  matcher.py  metrics.py  schema_traversal.py  schema_utils.py  scorer.py
tests/: run_deepjsoneval_benchmark.py  run_extractbench_benchmark.py  run_multi_resume_benchmark.py
